[project]
name = "support-ops-env"
version = "0.1.0"
description = "OpenEnv environment for customer support automation"
authors = [
    {name = "Mahitha"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"