[project]
name = "support-ops-env"
version = "0.1.0"
description = "OpenEnv environment for customer support automation"
authors = [
    {name = "Mahitha"}
]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv>=0.1.0"
]

[project.scripts]
server = "app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
